working on jpql and Query annotation